# OpenInspector

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: README.md
notebooks/: demo_signal_flow.md
openinspector/: __init__.py  client.py  config.py  database.py  defense.py  detection.py  models.py  signals.py
openinspector/agents/: __init__.py  inspector_agent.py
openinspector/api/: __init__.py  __main__.py  routes.py
tests/: test_ingest.py
